clang/test/Ripple/external-ripple-lib/mask-option-error.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: aarch64-registered-target
// RUN: %clang -ffreestanding --target=aarch64-unknown-linux-gnu -DCOMPILE_LIB -c -O2 -emit-llvm %s -o %t.rlib.bc
// RUN: %clang -ffreestanding --target=aarch64-unknown-linux-gnu -O2 -fenable-ripple -emit-llvm -S -o %t -fripple-lib %t.rlib.bc -mllvm -ripple-disable-link %s 2>%t.err; FileCheck %s --input-file=%t.err

#ifdef COMPILE_LIB

typedef float v4f32 __attribute__((vector_size(16))) __attribute__((aligned(16)));
typedef float v16f32 __attribute__((vector_size(64))) __attribute__((aligned(16)));
typedef float v256f32 __attribute__((vector_size(1024))) __attribute__((aligned(16)));

// Wrong type
extern v256f32 ripple_externf(v4f32 A, v16f32 B) { v256f32 v = {8.f, 1.f}; return v; }
extern v256f32 ripple_mask_externf(v4f32 A, v16f32 B, v4f32 C) { v256f32 v = {8.f, 1.f}; return v; }
// No mask argument
extern v256f32 ripple_externf2() { v256f32 v = {8.f, 1.f}; return v; }
extern v256f32 ripple_mask_externf2() { v256f32 v = {8.f, 1.f}; return v; }

#else

#include <ripple.h>

#define TILE_SIZE 16

// CHECK: error: function 'ripple_mask_externf' '_mask' option requires the last argument to be an integer vector
// CHECK: error: function 'ripple_mask_externf2' is missing the mask argument for '_mask' option

extern float externf(float, float);
extern float externf2();

void test(float *restrict A, float *restrict B, float *restrict C) {
  ripple_block_t BS = ripple_set_block_shape(0, TILE_SIZE);
  size_t v0 = ripple_id(BS, 0);
  C[v0] = externf(A[v0], B[v0]);
  C[v0] += externf2();
}

#endif
